--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
 </head>
 
-<body> <!-- the body element contains the content of the webpage -->
+<body> <!-- the body element contains the content of the webpage TEST123-->
 
   <!-- ======= Header ======= --> <!-- header element represents introductory content such as navigation aids and some heading elements-->
   <header id="header" class="fixed-top d-flex align-items-center header-transparent"> 
