updated name in the header section

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Daniel Brannon</title>
+  <title>Anahi Vicente</title>
   <meta name="description" content="This is the website of Daniel Brannon. He is an Associate Professor of Marketing at the University of Northern Colorado">
   <meta name="keywords" content="daniel brannon, marketing, northern colorado, consumers, teaching, digital marketing" >
 
