updated name in header section

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <div class="container d-flex justify-content-between align-items-center"> <!-- div tag defines a section in the HTML document--used as a container for HTML elements--can be styled with CSS -->
 
       <div id="logo">
-        <h1><a href="index.html">Daniel Brannon</a></h1> <!-- use this to place your name at the top right of the page -->
+        <h1><a href="index.html">Anahi Vicente</a></h1> <!-- use this to place your name at the top right of the page -->
       </div>
 
       <nav id="navbar" class="navbar"> <!-- this section provides nagitation links -->
