changed name in about us page

--- a/about.html
+++ b/about.html
@@ -36,7 +36,7 @@
     <div class="container d-flex justify-content-between align-items-center">
 
       <div id="logo">
-        <h1><a href="index.html">Daniel Brannon</a></h1> <!-- use this to place your name at the top left of the page THIS IS A TEST OF WEB VSTUDIO-->
+        <h1><a href="index.html">Anahi Vicente</a></h1> <!-- use this to place your name at the top left of the page THIS IS A TEST OF WEB VSTUDIO-->
       </div>
 
       <nav id="navbar" class="navbar">
