changed the paragraph statement

--- a/about.html
+++ b/about.html
@@ -78,7 +78,7 @@
           <div class="col-lg-6 content order-lg-1 order-2">
             <h2 class="title">A Few Words About Me</h2>
             <p>
-              I am an Associate Professor of Marketing at the University of Northern Colorado where I research and teach in the areas of consumer psychology and digital marketing. I enjoy spending time with my family, biking, traveling, and learning about new languages and cultures.
+              I am an undergraduate Marketing student at the University of Northern Colorado. I hope one day to travel the world and gain new experiences.
             </p>
 
             <div class="icon-box" data-aos="fade-up" data-aos-delay="100">
