change the description

--- a/about.html
+++ b/about.html
@@ -84,7 +84,7 @@
             <div class="icon-box" data-aos="fade-up" data-aos-delay="100">
               <div class="icon"><i class="bi bi-briefcase"></i></div>
               <h4 class="title"><a href="">Travel Interests</a></h4>
-              <p class="description">My research topics of interest include human-computer interaction, consumer financial decision-making, premium/luxury consumption. My work has been published in top business journals including Journal of Consumer Research, Journal of the Academy of Marketing Science, and Journal of Business Research. <a href = https://scholar.google.com/citations?user=rDQdoI0AAAAJ&hl=en> Check out my Google Scholar page!</a></p>
+              <p class="description">Some of the places I want to travel in the future include Japan, Italy, Greece, Dubai, Singapore. <a href = https://scholar.google.com/citations?user=rDQdoI0AAAAJ&hl=en> Check out my Google Scholar page!</a></p>
             </div>
 
             <div class="icon-box" data-aos="fade-up" data-aos-delay="200">
