--- a/about.html
+++ b/about.html
@@ -90,7 +90,7 @@
             <div class="icon-box" data-aos="fade-up" data-aos-delay="200">
               <div class="icon"><i class="bi bi-card-checklist"></i></div>
               <h4 class="title"><a href="">Why Travel?</a></h4>
-              <p class="description">Classes I have taught include Consumer Behavior, Marketing Research and Analysis, Web and Digital Ad Analytics, and Digital Advertising. My teaching philosophy is centered around providing students with both theory and hands-on experience in the latest marketing trends and technologies. I strive to provide a positive and supportive learning environment in the classroom. Relevant marketing technologies I teach include Google Analytics, Google Tag Manager, Google Data Studio, Google Search and Display Ads, Tableau, JASP, HTML/CSS, and Qualtrics.</p>
+              <p class="description"> Exploring new destinations lets us discover diverse cultures,food, and landscapes firsthand. We get to create memborable stories and experiences to cherish and share. Traveling opens our eyes and haerts to new places, people and experiences.</p>
             </div>
 
             <div class="icon-box" data-aos="fade-up" data-aos-delay="300">
