changed the content title

--- a/blog.html
+++ b/blog.html
@@ -7,7 +7,7 @@
 
   <title>Blog</title>
   <meta name="description" content="This page is my personal blog" >
-  <meta name="keywords" content="Daniel Brannon, blog" >
+  <meta name="keywords" content="Anahi Vicente, blog" >
 
   <!-- Favicons -->
   <link href="assets/img/cat-favicon.png" rel="icon">
