changed section header

--- a/blog.html
+++ b/blog.html
@@ -70,7 +70,7 @@
 
     <!-- ======= Blog Section ======= -->
     <div class="header">
-      <h2>Daniel Brannon's Blog</h2>
+      <h2>Anahi Vicente's Blog</h2>
     </div>
     
     <div class="row">
