--- a/blog.html
+++ b/blog.html
@@ -78,7 +78,7 @@
         <div class="card">
           <h2>Top 5 Recommended Consumer Psychology Books for Marketers</h2>
           <h5>The books give great consumer psychology insights and are relevant to practitioners,</h5>
-          <p style="font-size:25px"> 1. Contagious by Jonah Berger</p>
+          <p style="font-size:25px"> 1. Rick Steves Italy (Travel Guide)</p>
           <p><a href="https://www.amazon.com/Rick-Steves-Italy/dp/164171459X/ref=sr_1_3?crid=1QRL65KM3FEGC&keywords=travel+guide+books&qid=1699554638&sprefix=travel+guide+books%2Caps%2C121&sr=8-3">
           <img src = "https://github.com/dcbranno/Regna/blob/master/assets/img/contagious-img.jpg?raw=true" class="blogimg" style="width:300px;height:300px;"></a></p>
           <p style="font-size:25px"> 2. Don't Make Me Think by Steve Krug</p>
