--- a/blog.html
+++ b/blog.html
@@ -81,7 +81,7 @@
           <p style="font-size:25px"> 1. Rick Steves Italy (Travel Guide)</p>
           <p><a href="https://www.amazon.com/Rick-Steves-Italy/dp/164171459X/ref=sr_1_3?crid=1QRL65KM3FEGC&keywords=travel+guide+books&qid=1699554638&sprefix=travel+guide+books%2Caps%2C121&sr=8-3">
           <img src = "https://github.com/dcbranno/Regna/blob/master/assets/img/contagious-img.jpg?raw=true" class="blogimg" style="width:300px;height:300px;"></a></p>
-          <p style="font-size:25px"> 2. Don't Make Me Think by Steve Krug</p>
+          <p style="font-size:25px"> 2. Lonely Planet Japan 17 (Travel Guide)</p>
           <p> <a href="https://www.amazon.com/Dont-Make-Think-Revisited-Usability/dp/0321965515/">
           <img src = "https://github.com/dcbranno/Regna/blob/master/assets/img/think-img.jpg?raw=true" class="blogimg" style="width:300px;height:300px;"></a></p>
           <p style="font-size:25px"> 3. Influence by Robert Cialdini</p>
