--- a/blog.html
+++ b/blog.html
@@ -82,7 +82,7 @@
           <p><a href="https://www.amazon.com/Rick-Steves-Italy/dp/164171459X/ref=sr_1_3?crid=1QRL65KM3FEGC&keywords=travel+guide+books&qid=1699554638&sprefix=travel+guide+books%2Caps%2C121&sr=8-3">
           <img src = "https://github.com/dcbranno/Regna/blob/master/assets/img/contagious-img.jpg?raw=true" class="blogimg" style="width:300px;height:300px;"></a></p>
           <p style="font-size:25px"> 2. Lonely Planet Japan 17 (Travel Guide)</p>
-          <p> <a href="https://www.amazon.com/Dont-Make-Think-Revisited-Usability/dp/0321965515/">
+          <p> <a href="https://www.amazon.com/Lonely-Planet-Japan-Country-Guide/dp/1788683811/ref=sr_1_11?crid=1QRL65KM3FEGC&keywords=travel+guide+books&qid=1699554890&sprefix=travel+guide+books%2Caps%2C121&sr=8-11">
           <img src = "https://github.com/dcbranno/Regna/blob/master/assets/img/think-img.jpg?raw=true" class="blogimg" style="width:300px;height:300px;"></a></p>
           <p style="font-size:25px"> 3. Influence by Robert Cialdini</p>
           <p><a href="https://www.amazon.com/Influence-Psychology-Persuasion-Robert-Cialdini/dp/006124189X/">
