--- a/blog.html
+++ b/blog.html
@@ -84,7 +84,7 @@
           <p style="font-size:25px"> 2. Lonely Planet Japan 17 (Travel Guide)</p>
           <p> <a href="https://www.amazon.com/Lonely-Planet-Japan-Country-Guide/dp/1788683811/ref=sr_1_11?crid=1QRL65KM3FEGC&keywords=travel+guide+books&qid=1699554890&sprefix=travel+guide+books%2Caps%2C121&sr=8-11">
           <img src = "https://github.com/dcbranno/Regna/blob/master/assets/img/think-img.jpg?raw=true" class="blogimg" style="width:300px;height:300px;"></a></p>
-          <p style="font-size:25px"> 3. Influence by Robert Cialdini</p>
+          <p style="font-size:25px"> 3. Destinations of a Lifetime: 225 of the World's Most Amazing Places by National Geographic</p>
           <p><a href="https://www.amazon.com/Influence-Psychology-Persuasion-Robert-Cialdini/dp/006124189X/">
           <img src = "https://github.com/dcbranno/Regna/blob/master/assets/img/influence-img.jpg?raw=true" class="blogimg" style="width:300px;height:300px;"></a></p>
           <p style="font-size:25px"> 4. Predictably Irrational by Dan Ariely</p>
