--- a/blog.html
+++ b/blog.html
@@ -87,7 +87,7 @@
           <p style="font-size:25px"> 3. Destinations of a Lifetime: 225 of the World's Most Amazing Places by National Geographic</p>
           <p><a href="https://www.amazon.com/Influence-Psychology-Persuasion-Robert-Cialdini/dp/006124189X/">
           <img src = "https://github.com/dcbranno/Regna/blob/master/assets/img/influence-img.jpg?raw=true" class="blogimg" style="width:300px;height:300px;"></a></p>
-          <p style="font-size:25px"> 4. Predictably Irrational by Dan Ariely</p>
+          <p style="font-size:25px"> 4. Europe by Eurail 2023 by Laverne Ferguson-Kosinski</p>
           <p><a href="https://www.amazon.com/Predictably-Irrational-1-Exp-Rev/dp/B0076YEIFQ/">
           <img src = "https://github.com/dcbranno/Regna/blob/master/assets/img/irrational-img.jpg?raw=true" class="blogimg" style="width:300px;height:300px;"></a></p>
           <p style="font-size:25px"> 5. Nudge by Richard Thaler and Cass Sunstein</p>
