--- a/blog.html
+++ b/blog.html
@@ -76,7 +76,7 @@
     <div class="row">
       <div class="leftcolumn">
         <div class="card">
-          <h2>Top 5 Recommended Consumer Psychology Books for Marketers</h2>
+          <h2>Top 5 recommended travel guide books for anyone interested in traveling</h2>
           <h5>The books give great consumer psychology insights and are relevant to practitioners,</h5>
           <p style="font-size:25px"> 1. Rick Steves Italy (Travel Guide)</p>
           <p><a href="https://www.amazon.com/Rick-Steves-Italy/dp/164171459X/ref=sr_1_3?crid=1QRL65KM3FEGC&keywords=travel+guide+books&qid=1699554638&sprefix=travel+guide+books%2Caps%2C121&sr=8-3">
