changed the paragraph

--- a/contact.html
+++ b/contact.html
@@ -90,7 +90,7 @@
 
               <div>
                 <i class="bi bi-envelope"></i>
-                <p>daniel.brannon@unco.edu</p>
+                <p>vice1226@unco.edu</p>
               </div>
 
               <div>
