changed the paragraph

--- a/contact.html
+++ b/contact.html
@@ -85,7 +85,7 @@
             <div class="info">
               <div>
                 <i class="bi bi-geo-alt"></i>
-                <p>501 20th St, Greeley, CO 80639</p>
+                <p>501 W 20th St, Greeley, Co 80639</p>
               </div>
 
               <div>
