changed the paragraph

--- a/contact.html
+++ b/contact.html
@@ -73,7 +73,7 @@
       <div class="container">
         <div class="section-header">
           <h3 class="section-title">Contact</h3>
-          <p class="section-description">Please contact me if you would like more information about my digital marketing consulting services.</p>
+          <p class="section-description">Please contact me if you would like to talk about traveling.</p>
         </div>
       </div>
 
