--- a/contact.html
+++ b/contact.html
@@ -36,7 +36,7 @@
       <div class="container d-flex justify-content-between align-items-center">
   
         <div id="logo">
-          <h1><a href="index.html">Daniel Brannon</a></h1> <!-- use this to place your name at the top left of the page -->
+          <h1><a href="index.html">Anahi Vicente</a></h1> <!-- use this to place your name at the top left of the page -->
         </div>
   
         <nav id="navbar" class="navbar">
