changed the header section

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
   <section id="hero"> <!-- this section is formatting the top fold of the page and setting the background image with a call to hero-container class in CSS sheet -->
     <div class="hero-container" data-aos="zoom-in" data-aos-delay="100">
       <h1>Welcome to my website!</h1> <!-- Font style sizes etc are set in the hero section of the CSS sheet -->
-      <h2>I am a consumer psychology and digital marketing researcher</h2>
+      <h2>I am a undergraduate marketing student interested in exploring the world</h2>
       <a href="about.html" class="btn-get-started">About me</a> <!-- this sets button font on the top fold -->
     </div>
   </section><!-- End Hero Section -->
