--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
       <div class="container">
         <div class="row" data-aos="zoom-in">
           <div class="col-lg-9 text-center text-lg-start">
-            <h3 class="cta-title">Click Here Now to View My Top Recommended Consumer Psychology Books!</h3>
+            <h3 class="cta-title">Click Here Now to View My Top Recommended Travel Guide Books!</h3>
             <p class="cta-text"> These are books that I have found invaluable for understanding consumer psychology in an increasingly digital world of marketing. </p>
           </div>
           <div class="col-lg-3 cta-btn-container text-center">
