changed the paragraph

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         <div class="row" data-aos="zoom-in">
           <div class="col-lg-9 text-center text-lg-start">
             <h3 class="cta-title">Click Here Now to View My Top Recommended Travel Guide Books!</h3>
-            <p class="cta-text"> These are books that I have found helpful when wanting to learn more about places you are intrested in traveling to. </p>
+            <p class="cta-text"> These are books that I have found helpful when wanting to learn more about places you are interested in traveling to. </p>
           </div>
           <div class="col-lg-3 cta-btn-container text-center">
             <a class="cta-btn align-middle" href="blog.html">Click here to get the booklist</a>
