i changed the paragraph

--- a/about.html
+++ b/about.html
@@ -90,7 +90,7 @@
             <div class="icon-box" data-aos="fade-up" data-aos-delay="200">
               <div class="icon"><i class="bi bi-card-checklist"></i></div>
               <h4 class="title"><a href="">Why Travel?</a></h4>
-              <p class="description"> Exploring new destinations lets us discover diverse cultures,food, and landscapes firsthand. We get to create memborable stories and experiences to cherish and share. Traveling opens our eyes and haerts to new places, people and experiences.</p>
+              <p class="description"> Exploring new destinations lets us discover diverse cultures,food, and landscapes firsthand. We get to create memborable stories and experiences to cherish and share. Traveling opens our eyes and haerts to new places, people and experiences. Some of the places I want to travel to in the future include Japan, Italy, Greece, Dubai, and Singapore.</p>
             </div>
 
             <div class="icon-box" data-aos="fade-up" data-aos-delay="300">
