removed link from paragraph

--- a/about.html
+++ b/about.html
@@ -84,7 +84,7 @@
             <div class="icon-box" data-aos="fade-up" data-aos-delay="100">
               <div class="icon"><i class="bi bi-briefcase"></i></div>
               <h4 class="title"><a href="">About Me</a></h4>
-              <p class="description">I hope to one day help smaller businesses with their marketing goals in order to help build awareness for these businesses. I plan to then gain more learning experiences and take them with me to later open up my own business. . <a href = https://scholar.google.com/citations?user=rDQdoI0AAAAJ&hl=en> </a></p>
+              <p class="description">I hope to one day help smaller businesses with their marketing goals in order to help build awareness for these businesses. I plan to then gain more learning experiences and take them with me to later open up my own business.</p>
             </div>
 
             <div class="icon-box" data-aos="fade-up" data-aos-delay="200">
