changed the paragraph

--- a/about.html
+++ b/about.html
@@ -96,7 +96,7 @@
             <div class="icon-box" data-aos="fade-up" data-aos-delay="300">
               <div class="icon"><i class="bi bi-binoculars"></i></div>
               <h4 class="title"><a href="">More About Me</a></h4>
-              <p class="description">I have a lovely family! My wife Noemi and my two kids Daniella and Gabriel keep me busy on most weekends and weekday evenings. What have I been into lately? I play some chess (pporly) on Chess.com, ride my bike on the Poudre River Trail, am trying to learn some French, and am getting back into playing Magic the Gathering.</p>
+              <p class="description">I have always been interested in traveling since I was in high school. Having a family of 8 members has made it difficult to travel and therfore my parents would rethink about going on a family trip. However, now that I have added several destinations to my buckelist, I am determined to cross them off the list and hopefully be able to share these experiences with my family.</p>
             </div>
 
           </div>
