--- a/blog.html
+++ b/blog.html
@@ -79,7 +79,7 @@
           <h2>Top 5 recommended travel guide books for anyone interested in traveling</h2>
           <h5>The books guides anyone who wants to travel ,</h5>
           <p style="font-size:25px"> 1. Rick Steves Italy (Travel Guide)</p>
-          <p><a href="https://www.amazon.com/Rick-Steves-Italy/dp/164171459X/ref=sr_1_3?crid=1QRL65KM3FEGC&keywords=travel+guide+books&qid=1699554638&sprefix=travel+guide+books%2Caps%2C121&sr=8-3">
+          <p><a href="https://www.amazon.com/Rick-Steves-Italy/dp/164171459X/">
           <img src = "https://github.com/dcbranno/Regna/blob/master/assets/img/contagious-img.jpg?raw=true" class="blogimg" style="width:300px;height:300px;"></a></p>
           <p style="font-size:25px"> 2. Lonely Planet Japan 17 (Travel Guide) by Rebecca Milner</p>
           <p> <a href="https://www.amazon.com/Lonely-Planet-Japan-Country-Guide/dp/1788683811/ref=sr_1_11?crid=1QRL65KM3FEGC&keywords=travel+guide+books&qid=1699554890&sprefix=travel+guide+books%2Caps%2C121&sr=8-11">
