--- a/blog.html
+++ b/blog.html
@@ -88,7 +88,7 @@
           <p><a href="https://www.amazon.com/Influence-Psychology-Persuasion-Robert-Cialdini/dp/006124189X/">
           <img src = "https://github.com/dcbranno/Regna/blob/master/assets/img/influence-img.jpg?raw=true" class="blogimg" style="width:300px;height:300px;"></a></p>
           <p style="font-size:25px"> 4. Europe by Eurail 2023 by Laverne Ferguson-Kosinski</p>
-          <p><a href="https://www.amazon.com/Europe-Eurail-2023-Touring-Train/dp/1493070282/ref=sr_1_42?crid=1QRL65KM3FEGC&keywords=travel+guide+books&qid=1699554890&sprefix=travel+guide+books%2Caps%2C121&sr=8-42">
+          <p><a href="https://www.amazon.com/Europe-Eurail-2023-Touring-Train/dp/1493070282/">
           <img src = "https://github.com/dcbranno/Regna/blob/master/assets/img/irrational-img.jpg?raw=true" class="blogimg" style="width:300px;height:300px;"></a></p>
           <p style="font-size:25px"> 5. The Travel Book: A Journey Through Every Country in the World (Lonely Planet) by Lonely Planet</p>
           <p><a href="https://www.amazon.com/Travel-Book-Journey-Through-Country/dp/178701763X/ref=sr_1_14?crid=1QRL65KM3FEGC&keywords=travel+guide+books&qid=1699554890&sprefix=travel+guide+books%2Caps%2C121&sr=8-14">
