uploaded italy image

--- a/blog.html
+++ b/blog.html
@@ -80,7 +80,7 @@
           <h5>The books guides anyone who wants to travel ,</h5>
           <p style="font-size:25px"> 1. Rick Steves Italy (Travel Guide)</p>
           <p><a href="https://www.amazon.com/Rick-Steves-Italy/dp/164171459X/">
-          <img src = "https://?raw=true" class="blogimg" style="width:300px;height:300px;"></a></p>
+          <img src = "https://github.com/vice1226/simplesite/blob/main/assets/img/italy.jpg?raw=true" class="blogimg" style="width:300px;height:300px;"></a></p>
           <p style="font-size:25px"> 2. Lonely Planet Japan 17 (Travel Guide) by Rebecca Milner</p>
           <p> <a href="https://www.amazon.com/Lonely-Planet-Japan-Country-Guide/dp/1788683811/">
           <img src = "https://github.com/vice1226/simplesite/blob/main/assets/img/japan.jpeg?raw=true" class="blogimg" style="width:300px;height:300px;"></a></p>
