--- a/blog.html
+++ b/blog.html
@@ -86,7 +86,7 @@
           <img src = "https://github.com/vice1226/simplesite/blob/main/assets/img/japan.jpeg?raw=true" class="blogimg" style="width:300px;height:300px;"></a></p>
           <p style="font-size:25px"> 3. Destinations of a Lifetime: 225 of the World's Most Amazing Places by National Geographic</p>
           <p><a href="https://www.amazon.com/Influence-Psychology-Persuasion-Robert-Cialdini/dp/006124189X/">
-          <img src = "https://?raw=true" class="blogimg" style="width:300px;height:300px;"></a></p>
+          <img src = "https://github.com/vice1226/simplesite/blob/main/assets/img/Destinations.jpg?raw=true" class="blogimg" style="width:300px;height:300px;"></a></p>
           <p style="font-size:25px"> 4. Europe by Eurail 2023 by Laverne Ferguson-Kosinski</p>
           <p><a href="https://www.amazon.com/Europe-Eurail-2023-Touring-Train/dp/1493070282/">
           <img src = "https://github.com/dcbranno/Regna/blob/master/assets/img/irrational-img.jpg?raw=true" class="blogimg" style="width:300px;height:300px;"></a></p>
