--- a/blog.html
+++ b/blog.html
@@ -92,7 +92,7 @@
           <img src = "https://github.com/vice1226/simplesite/blob/main/assets/img/europe.jpg?raw=true" class="blogimg" style="width:300px;height:300px;"></a></p>
           <p style="font-size:25px"> 5. The Travel Book: A Journey Through Every Country in the World (Lonely Planet) by Lonely Planet</p>
           <p><a href="https://www.amazon.com/Travel-Book-Journey-Through-Country/dp/178701763X/">
-          <img src = "https://github.com/dcbranno/Regna/blob/master/assets/img/nudge-img.jpg?raw=true" class="blogimg" style="width:300px;height:300px;"></a></p>
+          <img src = "https://github.com/vice1226/simplesite/blob/main/assets/img/tavel%20book.jpg?raw=true" class="blogimg" style="width:300px;height:300px;"></a></p>
         </div>
       </div>
       <div class="rightcolumn">
