--- a/blog.html
+++ b/blog.html
@@ -98,7 +98,7 @@
       <div class="rightcolumn">
         <div class="card">
           <h2>About Me</h2>
-          <img src = "https://github.com/dcbranno/Regna/blob/master/assets/img/daniel-img.jpg?raw=true" class="blogimg" style="height:300px;">
+          <img src = "https://github.com/vice1226/simplesite/blob/main/assets/img/traveling.jpeg?raw=true" class="blogimg" style="height:300px;">
           <p>I am curious about new learning experiences that come with traveling.</p>
         </div>
         <div class="card">
