updated the paragraph

--- a/research1.html
+++ b/research1.html
@@ -73,7 +73,7 @@
       <div class="container" data-aos="fade-up">
         <div class="section-header">
           <h3 class="section-title">Research Portfolio</h3>
-          <p class="section-description">Here is a journal article that I have written. Click to download!</p>
+          <p class="section-description">Here are some pictures of different destinations!</p>
         </div>
         <a href="https://github.com/dcbranno/Regna/raw/master/assets/img/portfolio/Maximizing%20and%20Saving.pdf" download>
             <img src="assets/img/portfolio/PID-journal-img.JPG" alt="W3Schools">
