changed the description

--- a/video.html
+++ b/video.html
@@ -73,7 +73,7 @@
         <div class="container" data-aos="fade-up">
           <div class="section-header">
             <h3 class="section-title">Monfort College of Business</h3>
-            <p class="section-description">I work at the Monfort College of Business - University of Northern Colorado</p>
+            <p class="section-description">Here is destination that I want to travel to</p>
           </div>
           <div class="container" data-aos="fade-up">
             <iframe width="420" height="315"
