changed section title

--- a/video.html
+++ b/video.html
@@ -72,7 +72,7 @@
       <section id="mx">
         <div class="container" data-aos="fade-up">
           <div class="section-header">
-            <h3 class="section-title">Monfort College of Business</h3>
+            <h3 class="section-title">Singapore</h3>
             <p class="section-description">Here is destination that I want to travel to</p>
           </div>
           <div class="container" data-aos="fade-up">
