--- a/video.html
+++ b/video.html
@@ -62,7 +62,7 @@
           <ol>
             <li><a href="index.html">Home</a></li>
             <li><a href="about.html">Video</a></li>
-            <li>MCB Video</li>
+            <li>Singapore Video</li>
           </ol>
         </div>
       </div>
