--- a/research1.html
+++ b/research1.html
@@ -75,8 +75,8 @@
           <h3 class="section-title">Research Portfolio</h3>
           <p class="section-description">Here are some pictures of different destinations!</p>
         </div>
-        <a href="https://github.com/dcbranno/Regna/raw/master/assets/img/portfolio/Maximizing%20and%20Saving.pdf" download>
-            <img src="assets/img/portfolio/PID-journal-img.JPG" alt="W3Schools">
+        <a href="https://" download>
+            <img src="assets/img/portfolio/PID-journal-img.JPG" alt=>
         </a>
     </div>
     </section><!-- End Research Section -->
