--- a/research1.html
+++ b/research1.html
@@ -75,7 +75,7 @@
           <h3 class="section-title">Research Portfolio</h3>
           <p class="section-description">Here are some pictures of different destinations!</p>
         </div>
-        <a href="https://" download>
+        <a href="https://github.com/vice1226/simplesite/blob/main/assets/img/collage.jpeg" download>
             <img src="assets/img/portfolio/PID-journal-img.JPG" alt=>
         </a>
     </div>
